--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+    <%= render partial: 'shared/navbar' %>
     <div class="container-fluid">
       <%= yield %>
     </div>
