Show std. Rails errors for now

--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -2,6 +2,7 @@
 	<div id="new-game-card" class="card card-default">
 		<div class="card-body">
 			<h4 class="card-title">Create a new game</h4>
+			<%= render 'form_errors', game: @game %>
 			<div class="form-group">
 				<%# <label for="game_name"></label> %>
 				<%= f.label :name %>
