--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @game do |f| %>
+<%= form_with model: @game, local: true do |f| %>
 	<div id="new-game-card" class="card card-default">
 		<div class="card-body">
 			<h4 class="card-title">Create a new game</h4>
