Make whole game list item clickable

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,5 +1,5 @@
 <div id="game-list">
-	<ul class="list-group">
+	<div class="list-group">
 		<%= render partial: 'game_item', collection: @games, as: :game %>
-	</ul>
+	</div>
 </div>
