--- a/app/views/games/_game_item.html.erb
+++ b/app/views/games/_game_item.html.erb
@@ -1,1 +1,1 @@
-<li class="list-group-item"><%= link_to game.name, game_path(game) %></li>
+<%= link_to game.name, game_path(game), class: 'list-group-item list-group-item-action' %>
