Display 'please wait' to field operatives

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,2 +1,5 @@
-<%# TODO %>
-<p><%= @game.name %>…</p>
+<% if !@game.spymaster?(session) %>
+	<%= render partial: 'please_wait' %>
+<% else %>
+	The grid...
+<% end %>
