--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -1,7 +1,9 @@
-#game-list {
-	margin-top: 1em;
-}
-
-#new-game-card {
-	margin-top: 1em;
+#please-wait-jumbo {
+	display: flex;
+	width: 100%;
+	width: 100vw;
+	margin: 0;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
 }
