--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -7,3 +7,54 @@
 	justify-content: center;
 	text-align: center;
 }
+
+.game-grid {
+	border: 1px dotted #eee;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	margin: 0;
+	padding: 0;
+
+	.col {
+		flex: 1;
+		margin: 0;
+		padding: 0;
+
+		.cell {
+			border: 1px dotted #eee;
+			min-height: 10%;
+			min-height: 10vh;
+			text-transform: uppercase;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			text-align: center;
+			margin: 0;
+			padding: 0;
+			font-size: 120%;
+
+			&.red {
+				background-color: red;
+				color: white;
+			}
+			&.blue {
+				background-color: blue;
+				color: white;
+			}
+			&.black {
+				background-color: black;
+				color: white;
+			}
+			&.neutral {
+				background-color: beige;
+				color: black;
+			}
+			&.nil {
+				background-color: white;
+				color: black;
+			}
+		}
+	}
+}
