RF: Pass whole GameWord to partial

--- a/app/views/games/_game_grid.html.erb
+++ b/app/views/games/_game_grid.html.erb
@@ -2,7 +2,7 @@
 	<% Game::WIDTH.times do |x| %>
 		<div class="col">
 			<% Game::WIDTH.times do |y| %>
-				<%= render partial: 'grid_cell', locals: {x: x, y: y} %>
+				<%= render partial: 'grid_cell', locals: { game_word: @game.word_at_pos(x, y) } %>
 			<% end %>
 		</div>
 	<% end %>
