--- a/app/views/games/_grid_cell.html.erb
+++ b/app/views/games/_grid_cell.html.erb
@@ -1,3 +1,3 @@
-<div class="cell <%= @game.cell(x, y).who %>">
-	<%= @game.cell(x, y).word %>
+<div class="cell <%= game_word.who %>">
+	<%= game_word.word %>
 </div>
