--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -8,6 +8,21 @@
 	text-align: center;
 }
 
+#setup-words {
+	position: relative;
+
+	.title {
+		position: absolute;
+		top: -10px;
+		border-radius: 6px;
+		background-color: #ccc;
+		padding: 0 6px;
+	}
+	input[type=hidden] {
+		display: none;
+	}
+}
+
 .game-grid {
 	border: 1px dotted #eee;
 	display: flex;
@@ -24,8 +39,8 @@
 
 		.cell {
 			border: 1px dotted #eee;
-			min-height: 10%;
-			min-height: 10vh;
+			min-height: 13%;
+			min-height: 13vh;
 			text-transform: uppercase;
 			display: flex;
 			align-items: center;
@@ -34,27 +49,26 @@
 			margin: 0;
 			padding: 0;
 			font-size: 120%;
-
-			&.red {
-				background-color: red;
-				color: white;
-			}
-			&.blue {
-				background-color: blue;
-				color: white;
-			}
-			&.black {
-				background-color: black;
-				color: white;
-			}
-			&.neutral {
-				background-color: beige;
-				color: black;
-			}
-			&.nil {
-				background-color: white;
-				color: black;
-			}
 		}
+	}
+	.red {
+		background-color: red;
+		color: white;
+	}
+	.blue {
+		background-color: blue;
+		color: white;
+	}
+	.black {
+		background-color: black;
+		color: white;
+	}
+	.neutral {
+		background-color: beige;
+		color: black;
+	}
+	.nil {
+		background-color: white;
+		color: black;
 	}
 }
