--- a/app/views/games/_grid_cell.html.erb
+++ b/app/views/games/_grid_cell.html.erb
@@ -1,3 +1,3 @@
-<div class="cell <%= game_word.who %>">
+<div id="grid-cell-<%= game_word.position %>" class="cell <%= game_word.who %>" data-cell-id="<%= game_word.position %>">
 	<%= game_word.word %>
 </div>
