--- a/app/views/games/set_word.js.erb
+++ b/app/views/games/set_word.js.erb
@@ -1,1 +1,2 @@
-$("#cell-<%= @game_word.position %>").replaceWith("<%= j render partial: 'grid_cell', locals: { game_word: @game_word } %>");
+$("#grid-cell-<%= @game_word.position %>").replaceWith("<%= j render partial: 'grid_cell', locals: { game_word: @game_word } %>");
+$("#next-word").val("").focus();
