Change color selectors to go straight across
and be bigger, without the words showing; this is better for mobile
and we don't really need to see the words when entering the grid

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -73,25 +73,24 @@
 
 				.setter {
 					position: absolute;
+					top: 30%;
 					width: 20%;
-					height: 30%;
+					height: 40%;
+					border: 1px solid gray;
+					border-radius: 10%;
 					cursor: pointer;
 
 					&.red {
-						top: 12.5%;
-						left: 10%;
+						left: 4%;
 					}
 					&.blue {
-						top: 12.5%;
-						right: 10%;
+						left: 28%;
 					}
 					&.bystander {
-						bottom: 12.5%;
-						left: 10%;
+						left: 52%;
 					}
 					&.assassin {
-						bottom: 12.5%;
-						right: 10%;
+						left: 76%;
 					}
 				}
 			}
