--- a/app/views/games/_grid_cell.html.erb
+++ b/app/views/games/_grid_cell.html.erb
@@ -6,6 +6,7 @@
 			<div class="setter bystander" data-who="bystander">&nbsp;</div>
 			<div class="setter assassin" data-who="assassin">&nbsp;</div>
 		</div>
+	<% else %>
+		<%= game_word.word %>
 	<% end %>
-	<%= game_word.word %>
 </div>
