--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,5 +17,6 @@
     <div class="container-fluid">
       <%= yield %>
     </div>
+    <%= render partial: 'shared/modal_error' %>
   </body>
 </html>
