--- a/app/views/games/set_who.js.erb
+++ b/app/views/games/set_who.js.erb
@@ -1,6 +1,11 @@
-<% if @game.has_whos? %>
+<% if @game.has_whos? && !(error = @game.who_error) %>
 	window.location.replace("<%= game_url(@game); %>");
 <% else %>
 	$("#grid-cell-<%= @game_word.position %>").replaceWith("<%= j render partial: 'grid_cell', locals: { game_word: @game_word, color_setters: true } %>");
 	set_color_setter_handlers();
+	<% if error %>
+		$("#modal-error-title").html("Wrong colors");
+		$("#modal-error-text").html("<%= error %>");
+		$("#modal-error").modal();
+	<% end %>
 <% end %>
