--- a/app/views/shared/_modal_error.html.erb
+++ b/app/views/shared/_modal_error.html.erb
@@ -11,7 +11,7 @@
         <p id="modal-error-text"></p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="submit" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
