RF: Make top tip relative to container

--- a/app/views/games/_setup_whos.html.erb
+++ b/app/views/games/_setup_whos.html.erb
@@ -1,5 +1,5 @@
+<div class="tip-top">Set the colors for each square</div>
 <div id="setup-whos">
-	<div class="title">Set the colors for each square:</div>
 </div>
 <%= render partial: 'game_grid', locals: { color_setters: true } %>
 <script>
