--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -1,3 +1,15 @@
 nav {
 	margin-bottom: 1em;
 }
+
+#content {
+	position: relative;
+
+	.tip-top {
+		position: absolute;
+		top: -8px;
+		border-radius: 6px;
+		background-color: #ccc;
+		padding: 0 6px;
+	}
+}
