--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <body>
     <%= render partial: 'shared/navbar' %>
-    <div class="container-fluid">
+    <div id="content" class="container-fluid">
       <%= yield %>
     </div>
     <%= render partial: 'shared/modal_error' %>
