--- a/app/views/games/_manage_game.html.erb
+++ b/app/views/games/_manage_game.html.erb
@@ -1,5 +1,5 @@
 <div class="tip-top">Click a word to reveal it to everyone</div>
-<div id="manage-game">
+<div class="tip-gutter">
 </div>
 <%= render partial: 'game_grid' %>
 <script>
