--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -14,11 +14,7 @@
 	}
 }
 
-#setup-whos {
-	height: 24px;
-}
-
-#manage-game {
+.tip-gutter {
 	height: 24px;
 }
 
@@ -50,7 +46,13 @@
 			overflow: hidden;
 			margin: 0;
 			padding: 0;
-			font-size: 120%;
+			font-size: 75%;
+			@include media-breakpoint-up(sm) {
+				font-size: 100%;
+			}
+			@include media-breakpoint-up(md) {
+				font-size: 120%;
+			}
 
 			&.unrevealed {
 				cursor: pointer;
