--- a/app/views/games/get_word.js.erb
+++ b/app/views/games/get_word.js.erb
@@ -1,1 +1,2 @@
 $("#grid-cell-<%= @game_word.position %>").replaceWith("<%= j render partial: 'grid_cell', locals: { game_word: @game_word } %>");
+$("#team-section").replaceWith("<%= j render partial: 'teams' %>");
