--- a/app/views/shared/_navbar_game.html.erb
+++ b/app/views/shared/_navbar_game.html.erb
@@ -1,3 +1,3 @@
-<li class="nav-item active">
-	<%= link_to @game.name, game_path(@game), method: :get, class: 'nav-link' %>
-</li>
+<span class="navbar-text">
+	<%= @game.name %>
+</span>
