Contact and About pages

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,6 +7,8 @@
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav mr-auto">
 			<%= render partial: 'shared/navbar_new' %>
+			<%= render partial: 'shared/navbar_about' %>
+			<%= render partial: 'shared/navbar_contact' %>
 		</ul>
 	</div>
 </nav>
@@ -23,6 +25,8 @@
 	<div class="collapse navbar-collapse" id="navbarSupportedContent1">
 		<ul class="navbar-nav mr-auto">
 			<%= render partial: 'shared/navbar_new' %>
+			<%= render partial: 'shared/navbar_about' %>
+			<%= render partial: 'shared/navbar_contact' %>
 		</ul>
 	</div>
 </nav>
