--- a/app/views/shared/_navbar_new.html.erb
+++ b/app/views/shared/_navbar_new.html.erb
@@ -1,3 +1,3 @@
 <li class="nav-item <%= nav_new_aclass %>">
-	<%= link_to "&bullet;&nbsp;&nbsp;".html_safe + "#{t(:new).capitalize} #{Game.model_name.human}", new_game_path, method: :get, class: 'nav-link' %>
+	<%= link_to "#{t(:new).capitalize} #{Game.model_name.human}", new_game_path, method: :get, class: 'nav-link' %>
 </li>
