First-time hint

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: 'pages/first_time' %>
 <div id="game-list">
 	<div class="list-group">
 		<%= render partial: 'game_item', collection: @games, as: :game %>
