--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -20,7 +20,7 @@ nav {
 		position: absolute;
 		top: -8px;
 		border-radius: 6px;
-		background-color: #ccc;
+		background-color: #aca;
 		padding: 0 6px;
 
 		&.only-xs {
