--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,6 +7,7 @@
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav mr-auto">
 			<%= render partial: 'shared/navbar_new' %>
+			<%= render partial: 'shared/navbar_pin' %>
 			<%= render partial: 'shared/navbar_about' %>
 			<%= render partial: 'shared/navbar_contact' %>
 		</ul>
@@ -25,6 +26,7 @@
 	<div class="collapse navbar-collapse" id="navbarSupportedContent1">
 		<ul class="navbar-nav mr-auto">
 			<%= render partial: 'shared/navbar_new' %>
+			<%= render partial: 'shared/navbar_pin' %>
 			<%= render partial: 'shared/navbar_about' %>
 			<%= render partial: 'shared/navbar_contact' %>
 		</ul>
