Display flash (notably modal PIN entry errors)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
   <body>
     <%= render partial: 'shared/navbar' %>
     <div id="content" class="container-fluid">
+      <%= render 'shared/flash' %>
       <%= yield %>
     </div>
     <%= render partial: 'shared/modal_error' %>
