Add PIN to instructions, and other refinements

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,9 +1,11 @@
 <h3>About</h3>
 
-<p>This app is a mobile web app; nothing needs to be installed on your phone/handheld device, just visit the <%= link_to 'web page', root_url %>.</p>
+<p>This app is a mobile web app; <u>nothing needs to be installed</u> on your phone/handheld device, just visit the <%= link_to 'web page', root_url %>.</p>
 <ol>
-	<li>The spymaster should first use this app on their small device to create a <%= link_to 'New Game', new_game_path %>, and enter the words and red/blue for each square. Then keep the app hidden, and use it when giving clues; it will be a “remote control” to reveal squares on the big-screen device when your team makes their guesses.</li>
-	<li>Then you should also run this app on the big-screen device, choosing the named game the spymaster just created. It will show all the words, but only the revealed colors as the game progresses. It updates automatically in response to actions performed on the small device.</li>
+	<li>The spymaster should first use this web app on their <u>small device</u> to create a <%= link_to 'New Game', new_game_path %>. Shuffle the cards and enter 25 words. Then choose a random red/blue index card and set the corresponding colors on each square. The game is now ready to play.</li>
+	<li>The spymaster should keep their small device hidden, and use it when giving clues; it will be a “remote control” to reveal squares on the big-screen device when your team makes their guesses.</li>
+	<li>The spymasters can share one small device, or: The first spymaster can use the "PIN" menu option to get the PIN for the game, and give it to the second spymaster, who can use the "PIN" menu option on their own small device to access the game.</li>
+	<li>Then you should also run this app on the <u>big-screen device</u>, choosing the named game the spymaster just created. It will show all the words, but only the revealed colors as the game progresses. It updates automatically in response to actions performed on the small device.</li>
 </ol>
 
 <h4>So What Is This?</h4>
